2004-12-12  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/shadow.c (xnshadow_*2ticks, xnshadow_ticks2*):
	Temporarily re-implement slow versions.

	* include/nucleus/asm-i386/hal.h: Got rid of the broken
	rthal_ulldiv, and minimize usage of inline assembly.

	* include/nucleus/*/system.h: Allow interruption of
	xnarch_sleep_on in debug mode.

2004-12-11  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-uvm/system.h: Enforce start barrier and fix
	shadow mapping protocol.

	* skins/rtai/lib/task.c (rt_task_trampoline): Enforce start
	barrier.

	* nucleus/shadow.c (xnshadow_kick_process): Remove the shadow
	start call which was bugous wrt ptracing interaction, and has been
	deprecated by the start barrier mechanism.

	* nucleus/shadow.c: Fix ptracing support for shadow threads using
	a start barrier which allows to keep processing signals
	(e.g. SIGSTOP) for unstarted (i.e. dormant) threads.

2004-12-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib/task.c (rt_task_trampoline): Commit stack memory
	up to PTHREAD_STACK_MIN.
	(rt_task_create): Raise minimum stack to PTHREAD_STACK_MIN * 2.

	* skins/rtai/event.c (rt_event_signal): Do not auto-clear matched
	bits; this makes no sense with multiple waiters.

	* include/nucleus/queue.h: Disable queue checks in user-space code
	which does not run as part of any virtual machine, e.g. skin
	syslibs. This fixes the CONFIG_RTAI_OPT_DEBUG problem with
	skin/rtai/lib.

	* arch/*/hal/hal.c (rthal_request_irq): Only virtualize requested
	IRQs.

2004-12-09  Philippe Gerum  <rpm@xenomai.org>

	* GNUmakefile.am (dev devices): Always enable even if DESTDIR is set.

2004-12-08  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_do_timers): Add missing anticipation on
	timer trigger date, suppress useless timer->shot. Those changes
	seem to have extremely positive impact on latencies with low-end
	hw.

	* testsuite/klatency/latency-module.c (latency): Display overall
	min latency.
