@@ -1,10 +1,14 @@
 2004-12-12  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
 
+	* include/nucleus/asm-*/system.h : Add new macros for 64 bit
+	calculus, defined in hal.h.
+
 	* nucleus/shadow.c (xnshadow_*2ticks, xnshadow_ticks2*):
 	Temporarily re-implement slow versions.
 
 	* include/nucleus/asm-i386/hal.h: Got rid of the broken
-	rthal_ulldiv, and minimize usage of inline assembly.
+	rthal_ulldiv, minimize usage of inline assembly, add new functions
+	for 64 bits calculus.
 
 	* include/nucleus/*/system.h: Allow interruption of
 	xnarch_sleep_on in debug mode.
